--- a/src/style.css
+++ b/src/style.css
@@ -15,3 +15,15 @@ body {
     left: 0;
     outline: none;
 }
+
+.hint{
+    position: absolute;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+    color: #ffffff90;
+    left:50%;
+    bottom: 20px;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+}
